<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Toothache</string>
    <string name="choose_using_approach">Wybierz sposób użytkowania</string>
    <string name="use_as">Używaj jako:</string>
    <string name="patient">Pacjent</string>
    <string name="dentist">Dentysta</string>
    <string name="list">Lista</string>
    <string name="edit">Edytuj</string>
    <string name="patient_dentist">Pacjent / dentysta</string>
    <string name="email" tools:ignore="Typos">Adres e-mail</string>
    <string name="password">Hasło</string>
    <string name="sign_in_upper_case">ZALOGUJ SIĘ</string>
    <string name="dont_u_have_an_acc_up_case">NIE MASZ KONTA?</string>
    <string name="sign_up_up_case">ZAREJESTRUJ SIĘ</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="add_your_office_up_case">DODAJ SWÓJ GABINET</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="availability">Dostępność</string>
    <string name="ready_to_treat_n_fill_the_form">przyjmie od zaraz,\nwypełnij formularz</string>
    <string name="ask_on_the_phone">zapytaj przez telefon</string>
    <string name="ask_about_latter_visit_on_the_phone">umów wizytę na później przez telefon</string>
    <string name="call">Zadzwoń</string>
    <string name="fill_the_form_up_case">WYPEŁNIJ FORMULARZ</string>
    <string name="services">Usługi</string>
    <string name="no_of_zl">%1$d zł</string>
    <string name="name_and_surname">Imię i nazwisko</string>
    <string name="apply_changes_up_case">ZASTOSUJ ZMIANY</string>
    <string name="address" tools:ignore="Typos">Adres</string>
    <string name="no_phone_no">%1$d. nr tel.</string>
    <string name="no_doctor">%1$d. lekarz</string>
    <string name="office_name">Nazwa gabinetu</string>
    <string name="search">Wyszukaj</string>
    <string name="price">cena</string>
    <string name="no_service">%1$d. Usługa</string>
    <string name="edit_office">Edycja gabinetu</string>
    <string name="delete_account">Usuń konto</string>
    <string name="phone_no">Nr tel.</string>
    <string name="location">Miejscowość</string>
    <string name="eta">Przewidywany czas dojazdu (w min.)</string>
    <string name="order_visit_up_case">ZAMÓW WIZYTĘ</string>
    <string name="change_to_phone_orders_up_case">ZMIEŃ NA ZAMÓWIENIA TEL.</string>
    <string name="patient_underway">Pacjent w drodze:</string>
    <string name="visit_ended_up_case">WIZYTA ZAKOŃCZONA</string>
    <string name="do_u_really_want_to_delete_account">Czy na pewno chcesz usunąć konto?</string>
    <string name="yes_up_case">TAK</string>
    <string name="no_up_case">NIE</string>
    <string name="choose">Wybierz</string>
    <string name="voivodeship">Województwo:</string>
    <string name="service">usługa</string>

<!--    Województwa: -->
    <string name="dolnoslaskie">dolnośląskie</string>
    <string name="kuj_pom">kujawsko-pomorskie</string>
    <string name="lubelskie">lubelskie</string>
    <string name="lubuskie">lubuskie</string>
    <string name="lodzkie">łódzkie</string>
    <string name="malopolskie">małopolskie</string>
    <string name="mazowieckie">mazowieckie</string>
    <string name="opolskie">opolskie</string>
    <string name="podkarpackie">podkarpackie</string>
    <string name="podlaskie">podlaskie</string>
    <string name="pomorskie">pomorskie</string>
    <string name="slaskie">śląskie</string>
    <string name="swietokrzyskie">świętokrzyskie</string>
    <string name="warm_maz">warmińsko-mazurskie</string>
    <string name="wielkopolskie">wielkopolskie</string>
    <string name="zachodniopom">zachodniopomorskie</string>
    <string name="eta_in_minutes">Czas dojazdu w minutach: %1$d</string>

    <!--    Voivodeship pick dialog items: -->
    <string-array name="voivodeships">
        <item>dolnośląskie</item>
        <item>kujawsko-pomorskie</item>
        <item>lubelskie</item>
        <item>lubuskie</item>
        <item>łódzkie</item>
        <item>małopolskie</item>
        <item>mazowieckie</item>
        <item>opolskie</item>
        <item>podkarpackie</item>
        <item>podlaskie</item>
        <item>pomorskie</item>
        <item>śląskie</item>
        <item>świętokrzyskie</item>
        <item>warmińsko-mazurskie</item>
        <item>wielkopolskie</item>
        <item>zachodniopomorskie</item>
    </string-array>

</resources>
