<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_your_offices">
        <item
            android:id="@+id/availability"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/availability"
            />
        <item
            android:id="@+id/edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/edit_office"
            />
    </group>
    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/delete_account"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/delete_account"
            />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/sign_out"
            />
    </group>
</menu>