<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/using_type_lin_lay_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/choose_using_approach"
        android:textColor="@color/dark_gray22"
        android:textSize="50sp"
        android:textStyle="bold"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/padding"
        android:text="@string/use_as"
        android:textColor="@color/dark_gray22"
        android:textSize="32sp"
        />

    <Button
        android:id="@+id/using_type_patient_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/padding"
        android:background="@drawable/selector_blue_medical"
        android:fontFamily="sans-serif-medium"
        android:text="@string/patient"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/using_type_dentist_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/padding"
        android:background="@drawable/selector_green_medical"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dentist"
        android:textSize="24sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>