<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="48dp"
        android:text="@string/do_u_really_want_to_delete_account"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_delete_forever_red_24dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/dentist_delete_yes_btn_id"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes_up_case"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/white"
            android:background="@color/rede4"
            android:layout_weight="2" />

        <Button
            android:id="@+id/dentist_delete_no_btn_id"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_up_case"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:background="@color/lighter_blue_medical84"
            android:textColor="@android:color/black"
            android:layout_weight="3" />
    </LinearLayout>


</LinearLayout>