<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dentist_edit_parent_lay_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/dentist_edit_button_id"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <!--                Nazwa gabinetu:    -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dentist_edit_name_edit_t_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="1"
                    android:hint="@string/office_name"
                    android:inputType="text"
                    tools:ignore="UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--                Imiona i nazwiska: -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_v_dentist_edit_dr_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <!--                Dostępność: domyślnie nakładana -->

            <!--                Adres gabinetu: -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dentist_edit_address_edit_t_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    tools:ignore="UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--                Województwo: -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/voivodeship"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/dentist_edit_voivodeship_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="19sp" />

            </LinearLayout>

            <Button
                android:id="@+id/dentist_edit_choose_voivodeship_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
                android:background="@drawable/selector_blue_medical"
                android:padding="@dimen/padding_small"
                android:text="@string/choose"
                android:textColor="@android:color/black" />


            <!--                Nry telefonu:-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_v_dentist_edit_phone_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <!--                Usługi dentystyczne: -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_v_dentist_edit_services_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/dentist_edit_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_green_medical"
        android:text="@string/apply_changes_up_case"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
