<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sign_in_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/sign_in_email_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"
            />

        <EditText
            android:id="@+id/sign_in_email_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_text_id"
            tools:ignore="Autofill,LabelFor"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/sign_in_password_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/password"
            android:textSize="19sp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints"
            />

        <EditText
            android:id="@+id/sign_in_password_input_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password_text_id"
            tools:ignore="Autofill,LabelFor"
            />

        <Button
            android:id="@+id/eye_button_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="9.5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_visibility_black_24dp"
            app:layout_constraintEnd_toEndOf="@id/sign_in_password_input_id"
            app:layout_constraintTop_toBottomOf="@id/sign_in_password_text_id"
            tools:ignore="ContentDescription"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/sign_in_login_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in_upper_case"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <!--android:background="@drawable/red_button_selector"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginBottom="16dp"
        >

        <View
            android:id="@+id/sign_in_right_line_id"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/sign_in_or_text_id"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:id="@+id/sign_in_or_text_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dont_u_have_an_acc_up_case"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sign_in_right_line_id"
            app:layout_constraintStart_toEndOf="@+id/sign_in_left_line_id"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:id="@+id/sign_in_left_line_id"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/sign_in_or_text_id"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/sign_in_sign_up_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_up_case"
        android:textSize="16sp"
        android:textStyle="bold"
        />
    <!--android:background="@drawable/blue_button_selector"-->


    <!--<Button-->
    <!--android:id="@+id/sign_in_get_list_button_id"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:text="D/ getList"-->
    <!--/>-->

</LinearLayout>